# Video_AI_Summarizer_Agent_with_Phidata

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_ui.py
basic/: app.py
